# prompt-saviour

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
crates/ps-core/: Cargo.toml
crates/ps-core/src/: config.rs  draft.rs  inject.rs  lib.rs  merge.rs  storage.rs
crates/ps-daemon/: Cargo.toml
crates/ps-daemon/src/: cli.rs  daemon.rs  lib.rs  main.rs  platform_hub.rs  runner.rs
crates/ps-daemon/tests/: pipeline_e2e.rs
crates/ps-gui/: index.html  package-lock.json  package.json  vite.config.ts
crates/ps-gui/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts  utils.ts
crates/ps-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/ps-gui/src-tauri/capabilities/: default.json
crates/ps-gui/src-tauri/icons/: icon.icns
crates/ps-gui/src-tauri/src/: autostart.rs  commands.rs  hotkey.rs  lib.rs  logging.rs  main.rs  services.rs  state.rs  watchdog.rs
crates/ps-gui/src-tauri/src/autostart/: linux.rs  macos.rs  windows.rs
crates/ps-gui/src-tauri/tests/: gui_e2e.rs
crates/ps-gui/src/components/: CrashToast.tsx
crates/ps-gui/src/i18n/: en.ts  index.tsx  zh-CN.ts
crates/ps-gui/src/pages/: About.tsx  CurrentPrompt.tsx  Dashboard.tsx  History.tsx  Permissions.tsx  Settings.tsx
crates/ps-input/: Cargo.toml
crates/ps-input/src/: keystroke.rs  lib.rs
crates/ps-linux/: Cargo.toml
crates/ps-linux/src/: atspi_text.rs  clipboard.rs  context.rs  lib.rs  permissions.rs  platform.rs  stub.rs
crates/ps-macos/: Cargo.toml
crates/ps-macos/src/: ax.rs  clipboard.rs  context.rs  keystroke.rs  lib.rs  permissions.rs  platform.rs  stub.rs
crates/ps-windows/: Cargo.toml
crates/ps-windows/src/: context.rs  lib.rs  permissions.rs  platform.rs  stub.rs  uia.rs
docs/: README.md  roadmap.md
docs/architecture/: capture-pipeline.md  overview.md
docs/cli/: reference.md
docs/data/: storage.md
docs/development/: setup.md  testing.md
docs/features/: index.md
docs/permissions/: linux.md  macos.md  windows.md
docs/product/: gui-app.md  overview.md
scripts/: build_macos_app.sh  e2e.sh  e2e_gui_macos.sh  e2e_linux.sh  e2e_macos.sh  e2e_windows.sh
