[package]
name = "ps-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ps_daemon"
path = "src/lib.rs"

[[bin]]
name = "prompt-saviour"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
chrono.workspace = true
clap.workspace = true
ctrlc = "3.4"
parking_lot.workspace = true
ps-core = { path = "../ps-core" }
ps-linux = { path = "../ps-linux" }
ps-windows = { path = "../ps-windows" }
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
tempfile = "3"
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
ps-macos = { path = "../ps-macos" }
