[package]
name = "ps-linux"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
arboard.workspace = true
parking_lot.workspace = true
ps-core = { path = "../ps-core" }
ps-input = { path = "../ps-input" }
serde.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
active-win-pos-rs = "0.9"
atspi = { version = "0.22", default-features = false, features = ["connection"] }
