[package]
name = "ps-macos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
accessibility-sys = "0.1"
anyhow.workspace = true
arboard.workspace = true
chrono.workspace = true
core-foundation = "0.10"
core-graphics = "0.24"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSRunningApplication", "NSWorkspace"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
parking_lot.workspace = true
ps-core = { path = "../ps-core" }
rdev = "0.5"
serde.workspace = true
tracing.workspace = true
