[package]
name = "ps-macos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
parking_lot.workspace = true
ps-core = { path = "../ps-core" }
serde.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2"
arboard.workspace = true
chrono.workspace = true
core-foundation = "0.10"
core-graphics = "0.24"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSRunningApplication", "NSWorkspace"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
rdev = "0.5"
tracing.workspace = true
